# pal

./: CMakeLists.txt  LICENSE.txt  README.md
shared/devdriver/: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  requirements.txt
shared/devdriver/apis/: CMakeLists.txt
shared/devdriver/apis/apis/: CMakeLists.txt  dd_allocator_api.h  dd_api_registry_api.h  dd_clocks_api.h  dd_common_api.h  dd_connection_api.h  dd_driver_utils_api.h  dd_enhanced_crash_info_api.h  dd_event_logging_api.h  dd_gpu_detective_api.h  dd_gpu_profiling_api.h  dd_logger_api.h  dd_memory_trace_api.h  dd_modules_api.h  dd_pipelines_api.h  dd_router_utils_api.h  dd_settings_api.h  dd_tool_api.h  dd_uber_trace_api.h
shared/devdriver/apis/common/: CMakeLists.txt
shared/devdriver/apis/ddEvent/: CMakeLists.txt  README.md
shared/devdriver/apis/ddNet/: CMakeLists.txt  README.md
shared/devdriver/apis/ddRpc/: CMakeLists.txt  README.md
shared/devdriver/apis/ddSocket/: CMakeLists.txt  README.md
shared/devdriver/apis/events/: CMakeLists.txt  README.md
shared/devdriver/apis/rgdMgr/: CMakeLists.txt
shared/devdriver/cmake/: AMD.cmake  BuildLibftrace.cmake  CargoBridge.cmake  DevDriver.cmake  DevDriverBP.cmake  DevDriver_Tests.cmake  FindCargo.cmake  FindLibdrm.cmake  FindWdk.cmake  SetupAmdGlobalRoots.cmake
shared/devdriver/imported/: CMakeLists.txt
shared/devdriver/settings/: CMakeLists.txt  README.md  libyamlUtils.cpp  libyamlUtils.h  settingsBase.cpp  settingsBase.h  settingsConfig.cpp  settingsConfig.h  settingsParsingUtils.cpp  settingsParsingUtils.h  settingsService.cpp  settingsService.h  settingsTypes.h
shared/devdriver/shared/: CMakeLists.txt
shared/devdriver/updateCopyright/: paths-config.ini
shared/gpuopen/: CMakeLists.txt
shared/gpuopen/cmake/: AMD.cmake  DevDriver.cmake  DevDriverBP.cmake  FindCargo.cmake
shared/gpuopen/core/: CMakeLists.txt
shared/gpuopen/inc/: baseProtocolClient.h  baseProtocolServer.h  ddAbstractSocket.h  ddAmdGpuInfo.h  ddDefs.h  ddDevModeControl.h  ddDevModeControlCmds.h  ddDevModeControlDevice.h  ddDevModeQueue.h  ddLegacyDefs.h  ddPlatform.h  ddTemplate.h  ddTransferManager.h  ddURIRequestContext.h  ddUriInterface.h  ddVersion.h  devDriverClient.h  devDriverServer.h  gpuopen.h  legacyProtocolClient.h  listener.h  magicBuffer  msgChannel.h  msgTransport.h  padDataBuffer.h  protocolClient.h  protocolServer.h  protocolSession.h
shared/gpuopen/make/: Makefile.gpuopen
shared/gpuopen/src/: baseProtocolClient.cpp  baseProtocolServer.cpp  ddClientURIService.cpp  ddClientURIService.h  ddDevModeControlDevice.cpp  ddDevModeQueue.cpp  ddIoCtlDevice.h  ddLocalNgMsgTransport.cpp  ddLocalNgMsgTransport.h  ddPlatform.cpp  ddSocket.h  ddTransferManager.cpp  ddURIRequestContext.cpp  ddVersion.cpp  devDriverClient.cpp  devDriverServer.cpp  legacyProtocolClient.cpp  listener.cpp  messageChannel.cpp  messageChannel.h  messageChannel.inl  netMsgTransport.h  session.cpp  session.h  sessionManager.cpp  sessionManager.h  socket.h  socketMsgTransport.cpp  socketMsgTransport.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  cmdAllocator.cpp  cmdAllocator.h  cmdBuffer.cpp  cmdBuffer.h  cmdStream.cpp  cmdStream.h  cmdStreamAllocation.cpp  cmdStreamAllocation.h  crashAnalysisEventProvider.cpp  crashAnalysisEventProvider.h  dbgLoggerDevDriver.cpp  devDriverEventService.cpp  devDriverEventService.h  devDriverEventServiceConv.h  devDriverUtil.cpp  devDriverUtil.h  device.cpp  device.h  dmaCmdBuffer.cpp  dmaCmdBuffer.h  dmaUploadRing.cpp  dmaUploadRing.h  driverUtilsService.cpp  driverUtilsService.h  engine.cpp  engine.h  eventDefs.h  eventProvider.cpp  eventProvider.h  experimentsLoader.cpp  experimentsLoader.h  experiments_settings.json  fence.cpp  fence.h  formatInfo.cpp  g_heapPerf.cpp  g_mergedFormatInfo.h  g_palPlatformSettings.cpp  g_palPlatformSettings.h  (+53 more)
src/core/addrMgr/: CMakeLists.txt  addrMgr.cpp  addrMgr.h
src/core/g_service/: CMakeLists.txt
src/core/hw/: CMakeLists.txt  amdgpu_asic.h
src/core/imported/: CMakeLists.txt
src/core/layers/: CMakeLists.txt  decorators.cpp  decorators.h  functionIds.h
src/core/misc/: CMakeLists.txt
src/core/os/: CMakeLists.txt
src/core/rpcDriverUtilsService/: CMakeLists.txt
src/gpuUtil/: CMakeLists.txt  apiInfoTraceSource.cpp  apiInfoTraceSource.h  appProfileIterator.cpp  asicInfoTraceSource.cpp  asicInfoTraceSource.h  clockCalibTraceSource.cpp  clockCalibTraceSource.h  codeObjectTraceSource.cpp  frameTraceController.cpp  frameTraceController.h  gpaSession.cpp  gpaSessionPerfSample.cpp  gpaSessionPerfSample.h  gpuEventPool.cpp  gpuPerfExperimentTraceSource.cpp  gpuPerfExperimentTraceSource.h  gpuUtil.cpp  queueTimingsTraceSource.cpp  renderOpTraceController.cpp  sqtt_file_format.h  stringTableTraceSource.cpp  traceConfigTraceSource.cpp  traceConfigTraceSource.h  traceSession.cpp  uberTraceService.cpp  uberTraceService.h  userMarkerHistoryTraceSource.cpp
src/util/: CMakeLists.txt  arFile.cpp  archiveFile.cpp  archiveFile.h  archiveFileHelper.cpp  archiveFileHelper.h  assert.cpp  cacheLayerBase.cpp  cacheLayerBase.h  compressingCacheLayer.cpp  compressingCacheLayer.h  conditionVariable.cpp  dbgLogMgr.cpp  dbgLogger.cpp  dbgPrint.cpp  directDrawSurface.cpp  directDrawSurface.h  elfReader.cpp  file.cpp  fileArchiveCacheLayer.cpp  fileArchiveCacheLayer.h  hsaAbiMetadata.cpp  jemallocSysMemory.cpp  jsonWriter.cpp  lz4Compressor.cpp  lz4Compressor.h  math.cpp  md5.cpp  memMapFile.cpp  memoryCacheLayer.cpp  memoryCacheLayer.h  pipelineAbiReader.cpp  platformKey.cpp  platformKey.h  precompiledHeaders.h  semaphore.cpp  stringUtil.cpp  sysMemory.cpp  sysUtil.cpp  systemEvent.cpp  (+5 more)
src/util/imported/: CMakeLists.txt  TinySHA1.hpp  md5.hpp
src/util/lnx/: CMakeLists.txt  lnxArchiveFile.cpp  lnxArchiveFile.h  lnxConditionVariable.cpp  lnxEvent.cpp  lnxFileMap.cpp  lnxHashProvider.cpp  lnxHashProvider.h  lnxLibrary.cpp  lnxMutex.cpp  lnxOpenssl.cpp  lnxOpenssl.h  lnxSemaphore.cpp  lnxSysMemory.cpp  lnxSysUtil.cpp  lnxSysUtil.h  lnxThread.cpp  lnxTimeout.cpp  lnxTimeout.h  lnxUuid.cpp
(+1816 files in other folders)
